force-app/main/default/objects/Scan__c/fields/IFv2_ArchiveError__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ArchiveError__c</fullName>
    <label>Archive Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>