force-app/main/default/objects/Scan__c/fields/IFv2_ContentversionIds__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ContentversionIds__c</fullName>
    <description>used to store content version ids of scan record and also used to store glacier id when scan is archived</description>
    <label>ContentversionIds</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>