force-app/main/default/objects/Scan__c/fields/IFv2_DateTime__c.field-meta.xml
<CustomField>
    <fullName>IFv2_DateTime__c</fullName>
    <description>Used for storing the Date Time of the attached xml document</description>
    <inlineHelpText>Displays the date time of the attached SCAN document</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>