force-app/main/default/objects/Scan__c/fields/IFv2_SAPStatus__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SAPStatus__c</fullName>
    <description>Used to display the SAP call status of the SCAN record</description>
    <label>SAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>