force-app/main/default/objects/Scan__c/fields/IFv2_Timezone__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Timezone__c</fullName>
    <description>To display the timzone of the SCAN record based on the source (IMAP/Reisswolf)</description>
    <formula>IF( CONTAINS( CreatedBy.LastName , &apos;IMAP&apos;) , &apos;IST&apos;, 
IF( CONTAINS( CreatedBy.LastName , &apos;Reiswolf&apos;), &apos;CET&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>